maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:33: error: ':' expected but ',' found.
  def suivreMur(dir1, dir2) {
                    ^IslandMaze:44: error: identifier expected but '}' found.
} 
^