maze.island.IslandMaze.scala.code
override def run() {
  etat(0)
  
  def etat(e:Int) {
    e match {
      case 0 => nord()
      case 1 => suivreMur()
      case _ => println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")
    }
  }
  
  def suivreMur() {
    while(!estSurBiscuit())
      suivreMur(droite(), gauche())
    prendBiscuit()
  }
  
  def nord() {
    setDirection(Direction.NORTH)
    while(getY() != 0) {
      if(getDirection == Direction.NORTH && !estFaceMur())
      	avance()
      else {
        if(getDirection == Direction.EAST)
          suivreMur(gauche(), droite())
        else suivreMur(droite(), gauche())
      }
    }
    etat(1)
  }
  
  def suivreMur(dir1, dir2) {
    dir1()
    if(estFaceMur()) {
      dir2()
      if(!estFaceMur())
      	avance()
      else
      	dir2()
    } else
    	avance()
  }
}